Sketch of the survey

--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
     <body>
 
 <div class="mainContainer">
+
+    <div class="introContainer">
+        <h3>Badanie preferencji wizualnych</h3>
+        <p>Tutaj jest wstęp do badania</p>
+        <div class="nextQuestionBox">
+            <button class="nextQuestion">Zaczynamy</button>
+        </div>
+
+    </div>
   
     <div class="questionSwitchContainer">
       <div class = "image img1"></div>
