About examined person pools

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <div class="mainContainer">
 
-    <div class="introContainer">
+    <div class="introContainer subMainBox">
         <h3>Badanie preferencji wizualnych</h3>
         <p>Tutaj jest wstęp do badania</p>
         <div class="nextQuestionBox">
@@ -20,7 +20,7 @@
 
     </div>
   
-    <div class="questionSwitchContainer">
+    <div class="questionSwitchContainer subMainBox">
       <div class = "image img1"></div>
       <div>
         <h3 class="question">Czy to zdjęcie Ci się podoba?</h3>
@@ -39,7 +39,7 @@
     </div>
 </div>
     
-    <div class="questionSwitchContainer">
+    <div class="questionSwitchContainer subMainBox">
         <div class = "image img2"></div>
         <div>
         <h3 class="question">Czy to zdjęcie Ci się podoba?</h3>
@@ -58,7 +58,7 @@
     </div>
 </div>
   
-  <div class="questionSwitchContainer">
+  <div class="questionSwitchContainer subMainBox">
         <div class = "image img3"></div>
         <div>
         <h3 class="question">Czy to zdjęcie Ci się podoba?</h3>
@@ -76,7 +76,25 @@
         <button class="nextQuestion">Następne</button>
     </div>
 </div>
-  
+
+<!---------------------------SEKCJA RI--------------------------------- -->
+
+<!------------------INFORMACJE O OSOBIE BADANEJ------------------------ -->
+
+    <div class="aboutExaminedBox subMainBox">
+    <p>Od ilu lat zajmujesz się fotografią /sztukami wizualnymi?</p>
+
+    <form action="/action_page.php">
+        <input type="number" name="quantity" min="1" max="60">
+
+        
+
+
+        <div class="nextQuestionBox">
+        <input class="theLastButton" type="submit" value="Wyślij">
+        </div>
+    </form>
+    </div>
   
 </div>
 
