--- a/index.html
+++ b/index.html
@@ -82,18 +82,46 @@
 <!------------------INFORMACJE O OSOBIE BADANEJ------------------------ -->
 
     <div class="aboutExaminedBox subMainBox">
-    <p>Od ilu lat zajmujesz się fotografią /sztukami wizualnymi?</p>
+    <p>Od ilu lat zajmujesz się fotografią / sztukami wizualnymi?</p>
+
+        <div class="aboutExaminedQuestions">
 
     <form action="/action_page.php">
         <input type="number" name="quantity" min="1" max="60">
+        <br>
+        <input class="noDeclaration" type="checkbox" name="notAphotographer" value="no"> Nie zajmuję się fotografią / sztukami wizualnymi.<br>
 
-        
+
+        <p class="photoGenre">Które z tych zagadnień jest Ci najbliższe?</p>
+        <select class="kindOfPhotography" name="kindOfPhotography" size="15" multiple>
+            <option value="portretowa">fotografia portretowa</option>
+            <option value="reportażowa">fotografia reportażowa</option>
+            <option value="moda">fotografia mody</option>
+            <option value="reklamowa">fotografia reklamowa</option>
+            <option value="lifestyle">fotografia lifestyle</option>
+            <option value="konceptualna">fotografia konceptualna</option>
+            <option value="przyrodnicza">fotografia przyrodnicza</option>
+            <option value="abstrakcyjna">fotografia abstrakcyjna</option>
+            <option value="historia_fotografii">historia fotografii</option>
+            <option value="wystawiennicza">fotografia wystawiennicza</option>
+            <option value="analiza_obrazu">analiza obrazu</option>
+            <option value="teoria_obrazu">teoria obrazu</option>
+            <option value="szlachetne_techniki">szlachetne techniki w fotografii</option>
+            <option value="cyfrowa_obrobka_obrazu">cyfrowa obróbka obrazu</option>
+            <option value="inne">inne</option>
+        </select>
+        <br>
+
+        <p class="mainOccupationQuestion">Czy fotografia jest Twoim głównym zajęciem?</p>
+        <input class="mainOccupation" type="checkbox" name="notAphotographer" value="no"> Tak
+        <input class="mainOccupation" type="checkbox" name="notAphotographer" value="no"> Nie<br>
 
 
         <div class="nextQuestionBox">
         <input class="theLastButton" type="submit" value="Wyślij">
         </div>
     </form>
+        </div>
     </div>
   
 </div>
