Individual differences section

--- a/index.html
+++ b/index.html
@@ -19,65 +19,154 @@
         </div>
 
     </div>
-  
+
+
+<!----------------------------ZDJĘCIA ---------------------------------------------------------->
     <div class="questionSwitchContainer subMainBox">
-      <div class = "image img1"></div>
-      <div>
-        <h3 class="question">Czy to zdjęcie Ci się podoba?</h3>
-        <ul class="likert">
-            <li class="likertElement">Jest brzydkie<input id="scaleStart" type="radio" name="estimation" value="1" />
-            <li class="likertElement">Nie<input type="radio" name="estimation" value="2" />
-            <li class="likertElement">Raczej nie<input type="radio" name="estimation" value="3" />
-            <li class="likertElement">Nie mam zdania<input type="radio" name="estimation" value="4" />
-            <li class="likertElement">Raczej tak<input type="radio" name="estimation" value="5"/>
-            <li class="likertElement">Tak<input type="radio" name="estimation" value="6" />
-            <li class="likertElement">Jest piękne<input id="scaleEnd" type="radio" name="estimation" value="7" />
-        </ul>
+        <div class="imagePosition"><div class = "image img1"></div></div>
+        <div>
+            <h3 class="question">Czy to zdjęcie Ci się podoba?</h3>
+            <ul class="likert">
+                <li class="likertElement">Zdecydowanie nie<input id="scaleStart" type="radio" name="estimation" value="1" />
+                <li class="likertElement">Nie<input type="radio" name="estimation" value="2" />
+                <li class="likertElement">Raczej nie<input type="radio" name="estimation" value="3" />
+                <li class="likertElement">Nie mam zdania<input type="radio" name="estimation" value="4" />
+                <li class="likertElement">Raczej tak<input type="radio" name="estimation" value="5"/>
+                <li class="likertElement">Tak<input type="radio" name="estimation" value="6" />
+                <li class="likertElement">Zdecydowanie tak<input id="scaleEnd" type="radio" name="estimation" value="7" />
+            </ul>
+        </div>
+        <div class="nextQuestionBox">
+            <button class="nextQuestion">Następne</button>
+        </div>
     </div>
-    <div class="nextQuestionBox">
-        <button class="nextQuestion">Następne</button>
-    </div>
-</div>
-    
+
     <div class="questionSwitchContainer subMainBox">
-        <div class = "image img2"></div>
+        <div class="imagePosition"><div class = "image img2"></div></div>
         <div>
-        <h3 class="question">Czy to zdjęcie Ci się podoba?</h3>
-        <ul class="likert">
-            <li class="likertElement">Jest brzydkie<input id="scaleStart" type="radio" name="estimation" value="1" />
-            <li class="likertElement">Nie<input type="radio" name="estimation" value="2" />
-            <li class="likertElement">Raczej nie<input type="radio" name="estimation" value="3" />
-            <li class="likertElement">Nie mam zdania<input type="radio" name="estimation" value="4" />
-            <li class="likertElement">Raczej tak<input type="radio" name="estimation" value="5"/>
-            <li class="likertElement">Tak<input type="radio" name="estimation" value="6" />
-            <li class="likertElement">Jest piękne<input id="scaleEnd" type="radio" name="estimation" value="7" />
-        </ul>
+            <h3 class="question">Czy to zdjęcie Ci się podoba?</h3>
+            <ul class="likert">
+                <li class="likertElement">Zdecydowanie nie<input id="scaleStart" type="radio" name="estimation" value="1" />
+                <li class="likertElement">Nie<input type="radio" name="estimation" value="2" />
+                <li class="likertElement">Raczej nie<input type="radio" name="estimation" value="3" />
+                <li class="likertElement">Nie mam zdania<input type="radio" name="estimation" value="4" />
+                <li class="likertElement">Raczej tak<input type="radio" name="estimation" value="5"/>
+                <li class="likertElement">Tak<input type="radio" name="estimation" value="6" />
+                <li class="likertElement">Zdecydowanie tak<input id="scaleEnd" type="radio" name="estimation" value="7" />
+            </ul>
+        </div>
+        <div class="nextQuestionBox">
+            <button class="nextQuestion">Następne</button>
+        </div>
     </div>
-    <div class="nextQuestionBox">
-        <button class="nextQuestion">Następne</button>
-    </div>
-</div>
-  
-  <div class="questionSwitchContainer subMainBox">
-        <div class = "image img3"></div>
+
+    <div class="questionSwitchContainer subMainBox">
+        <div class="imagePosition"><div class = "image img3"></div></div>
         <div>
-        <h3 class="question">Czy to zdjęcie Ci się podoba?</h3>
-        <ul class="likert">
-            <li class="likertElement">Jest brzydkie<input id="scaleStart" type="radio" name="estimation" value="1" />
-            <li class="likertElement">Nie<input type="radio" name="estimation" value="2" />
-            <li class="likertElement">Raczej nie<input type="radio" name="estimation" value="3" />
-            <li class="likertElement">Nie mam zdania<input type="radio" name="estimation" value="4" />
-            <li class="likertElement">Raczej tak<input type="radio" name="estimation" value="5"/>
-            <li class="likertElement">Tak<input type="radio" name="estimation" value="6" />
-            <li class="likertElement">Jest piękne<input id="scaleEnd" type="radio" name="estimation" value="7" />
-        </ul>
+            <h3 class="question">Czy to zdjęcie Ci się podoba?</h3>
+            <ul class="likert">
+                <li class="likertElement">Zdecydowanie nie<input id="scaleStart" type="radio" name="estimation" value="1" />
+                <li class="likertElement">Nie<input type="radio" name="estimation" value="2" />
+                <li class="likertElement">Raczej nie<input type="radio" name="estimation" value="3" />
+                <li class="likertElement">Nie mam zdania<input type="radio" name="estimation" value="4" />
+                <li class="likertElement">Raczej tak<input type="radio" name="estimation" value="5"/>
+                <li class="likertElement">Tak<input type="radio" name="estimation" value="6" />
+                <li class="likertElement">Zdecydowanie tak<input id="scaleEnd" type="radio" name="estimation" value="7" />
+            </ul>
+        </div>
+        <div class="nextQuestionBox">
+            <button class="nextQuestion">Następne</button>
+        </div>
     </div>
-    <div class="nextQuestionBox">
-        <button class="nextQuestion">Następne</button>
-    </div>
-</div>
 
 <!---------------------------SEKCJA RI--------------------------------- -->
+
+    <div class="questionSwitchContainer subMainBox">
+
+        <div class="instructionRIbox">
+            <p class="instructionRI">
+                <b>INSTRUKCJA:</b> Przeczytaj tę instrukcję zanim zaczniesz odpowiadać. <br><br>
+                Kwestionariusz, który zaraz wypełnisz składa się z 60 stwierdzeń. Przeczytaj każde z nich uważnie. Przy każdym zdaniu zaznacz odpowiedź,<br>
+                która najlepiej wyraża Twoją opinię. Upewnij się czy swoją odpowiedź zaznaczasz przy odpowiednim stwierdzeniu.
+                <br>
+                <br>
+
+            Ustosunkuj się do wszystkich stwierdzeń.
+            </p>
+        </div>
+        <div class="nextQuestionBox">
+            <button class="nextQuestion">Rozumiem</button>
+        </div>
+    </div>
+
+
+
+
+
+<!-----------------------------------PYTANIA RI---------------------------->
+
+    <div class="questionSwitchContainer subMainBox">
+
+        <div class="RIquestionBox">
+            <h4 class="question">1. Nie należę do osób stale martwiących się.</h4>
+            <ul class="likertRI">
+                <li class="likertRIElement">Zdecydowanie nie zgadzam się<input id="scaleStart" type="radio" name="estimation" value="1" />
+                <li class="likertRIElement">Nie zgadzam się<input type="radio" name="estimation" value="2" />
+                <li class="likertRIElement">Nie mam zdania<input type="radio" name="estimation" value="3" />
+                <li class="likertRIElement">Zgadzam się<input type="radio" name="estimation" value="4" />
+                <li class="likertRIElement">Zdecydowanie nie zgadzam się<input type="radio" name="estimation" value="5"/>
+            </ul>
+        </div>
+        <div class="RIquestionBox">
+            <h4 class="question">2. Lubię mieć wielu ludzi wokół siebie.</h4>
+            <ul class="likertRI">
+                <li class="likertRIElement">Zdecydowanie nie zgadzam się<input id="scaleStart" type="radio" name="estimation" value="1" />
+                <li class="likertRIElement">Nie zgadzam się<input type="radio" name="estimation" value="2" />
+                <li class="likertRIElement">Nie mam zdania<input type="radio" name="estimation" value="3" />
+                <li class="likertRIElement">Zgadzam się<input type="radio" name="estimation" value="4" />
+                <li class="likertRIElement">Zdecydowanie nie zgadzam się<input type="radio" name="estimation" value="5"/>
+            </ul>
+        </div>
+        <div class="RIquestionBox">
+            <h4 class="question">3. Nie lubię tracić czasu na marzenia.</h4>
+            <ul class="likertRI">
+                <li class="likertRIElement">Zdecydowanie nie zgadzam się<input id="scaleStart" type="radio" name="estimation" value="1" />
+                <li class="likertRIElement">Nie zgadzam się<input type="radio" name="estimation" value="2" />
+                <li class="likertRIElement">Nie mam zdania<input type="radio" name="estimation" value="3" />
+                <li class="likertRIElement">Zgadzam się<input type="radio" name="estimation" value="4" />
+                <li class="likertRIElement">Zdecydowanie nie zgadzam się<input type="radio" name="estimation" value="5"/>
+            </ul>
+        </div>
+        <div class="RIquestionBox">
+            <h4 class="question">4. Staram się być uprzejmy(a) dla każdego, kogo spotkam.</h4>
+            <ul class="likertRI">
+                <li class="likertRIElement">Zdecydowanie nie zgadzam się<input id="scaleStart" type="radio" name="estimation" value="1" />
+                <li class="likertRIElement">Nie zgadzam się<input type="radio" name="estimation" value="2" />
+                <li class="likertRIElement">Nie mam zdania<input type="radio" name="estimation" value="3" />
+                <li class="likertRIElement">Zgadzam się<input type="radio" name="estimation" value="4" />
+                <li class="likertRIElement">Zdecydowanie nie zgadzam się<input type="radio" name="estimation" value="5"/>
+            </ul>
+        </div>
+        <div class="RIquestionBox">
+            <h4 class="question">5. Utrzymuję swoje rzeczy w czystości i porządku.</h4>
+            <ul class="likertRI">
+                <li class="likertRIElement">Zdecydowanie nie zgadzam się<input id="scaleStart" type="radio" name="estimation" value="1" />
+                <li class="likertRIElement">Nie zgadzam się<input type="radio" name="estimation" value="2" />
+                <li class="likertRIElement">Nie mam zdania<input type="radio" name="estimation" value="3" />
+                <li class="likertRIElement">Zgadzam się<input type="radio" name="estimation" value="4" />
+                <li class="likertRIElement">Zdecydowanie nie zgadzam się<input type="radio" name="estimation" value="5"/>
+            </ul>
+        </div>
+
+
+
+
+        <!----------------------------------------Następne-------------------------------------------------->
+        <div class="nextQuestionBox">
+            <button class="nextQuestion">Następne</button>
+        </div>
+    </div>
+
 
 <!------------------INFORMACJE O OSOBIE BADANEJ------------------------ -->
 
@@ -86,7 +175,7 @@
 
         <div class="aboutExaminedQuestions">
 
-    <form action="/action_page.php">
+    <form class="years" action="/action_page.php">
         <input type="number" name="quantity" min="1" max="60">
         <br>
         <input class="noDeclaration" type="checkbox" name="notAphotographer" value="no"> Nie zajmuję się fotografią / sztukami wizualnymi.<br>
