--- a/index.html
+++ b/index.html
@@ -114,11 +114,11 @@
                 <li class="likertRIElement">Nie zgadzam się<input type="radio" name="estimation" value="2" />
                 <li class="likertRIElement">Nie mam zdania<input type="radio" name="estimation" value="3" />
                 <li class="likertRIElement">Zgadzam się<input type="radio" name="estimation" value="4" />
-                <li class="likertRIElement">Zdecydowanie nie zgadzam się<input type="radio" name="estimation" value="5"/>
+                <li class="likertRIElement">Zdecydowanie zgadzam się<input type="radio" name="estimation" value="5"/>
             </ul>
         </div>
         <div class="RIquestionBox">
-            <h4 class="question">2. Mam dużą potrzebę wiedzy, często spradzam informacje.</h4>
+            <h4 class="question">2. Mam dużą potrzebę wiedzy, często uzupełniam informacje.</h4>
             <ul class="likertRI">
                 <li class="likertRIElement">Zdecydowanie nie zgadzam się<input id="scaleStart" type="radio" name="estimation" value="1" />
                 <li class="likertRIElement">Nie zgadzam się<input type="radio" name="estimation" value="2" />
@@ -128,7 +128,17 @@
             </ul>
         </div>
         <div class="RIquestionBox">
-            <h4 class="question">3. Interesują mnie estetyczne formy, które odkrywam w otoczeniu.</h4>
+            <h4 class="question">3. Gdy uda mi się znaleźć sposób na rozwiązanie problemu, następnym razem też używam tego sposobu.</h4>
+            <ul class="likertRI">
+                <li class="likertRIElement">Zdecydowanie nie zgadzam się<input id="scaleStart" type="radio" name="estimation" value="5" />
+                <li class="likertRIElement">Nie zgadzam się<input type="radio" name="estimation" value="4" />
+                <li class="likertRIElement">Nie mam zdania<input type="radio" name="estimation" value="3" />
+                <li class="likertRIElement">Zgadzam się<input type="radio" name="estimation" value="2" />
+                <li class="likertRIElement">Zdecydowanie nie zgadzam się<input type="radio" name="estimation" value="1"/>
+            </ul>
+        </div>
+        <div class="RIquestionBox">
+            <h4 class="question">4. Interesują mnie estetyczne formy, które odkrywam w otoczeniu.</h4>
             <ul class="likertRI">
                 <li class="likertRIElement">Zdecydowanie nie zgadzam się<input id="scaleStart" type="radio" name="estimation" value="1" />
                 <li class="likertRIElement">Nie zgadzam się<input type="radio" name="estimation" value="2" />
@@ -138,7 +148,17 @@
             </ul>
         </div>
         <div class="RIquestionBox">
-            <h4 class="question">4. Uważam, że powinniśmy uwzględniać nauki kościoła przy podejmowaniu moralnych decyzji.</h4>
+            <h4 class="question">5. Uważam, że powinniśmy uwzględniać nauki kościoła przy podejmowaniu moralnych decyzji.</h4>
+            <ul class="likertRI">
+                <li class="likertRIElement">Zdecydowanie nie zgadzam się<input id="scaleStart" type="radio" name="estimation" value="5" />
+                <li class="likertRIElement">Nie zgadzam się<input type="radio" name="estimation" value="4" />
+                <li class="likertRIElement">Nie mam zdania<input type="radio" name="estimation" value="3" />
+                <li class="likertRIElement">Zgadzam się<input type="radio" name="estimation" value="2" />
+                <li class="likertRIElement">Zdecydowanie nie zgadzam się<input type="radio" name="estimation" value="1"/>
+            </ul>
+        </div>
+        <div class="RIquestionBox">
+            <h4 class="question">6. Często próbuję nowych rzeczy: aktywności, potraw, technologii.</h4>
             <ul class="likertRI">
                 <li class="likertRIElement">Zdecydowanie nie zgadzam się<input id="scaleStart" type="radio" name="estimation" value="1" />
                 <li class="likertRIElement">Nie zgadzam się<input type="radio" name="estimation" value="2" />
@@ -148,23 +168,13 @@
             </ul>
         </div>
         <div class="RIquestionBox">
-            <h4 class="question">5. Często próbuję nowych rzeczy.</h4>
+            <h4 class="question">7. Nie lubię skupiać się na teoretycznych rozważaniach.</h4>
             <ul class="likertRI">
-                <li class="likertRIElement">Zdecydowanie nie zgadzam się<input id="scaleStart" type="radio" name="estimation" value="1" />
-                <li class="likertRIElement">Nie zgadzam się<input type="radio" name="estimation" value="2" />
+                <li class="likertRIElement">Zdecydowanie nie zgadzam się<input id="scaleStart" type="radio" name="estimation" value="5" />
+                <li class="likertRIElement">Nie zgadzam się<input type="radio" name="estimation" value="4" />
                 <li class="likertRIElement">Nie mam zdania<input type="radio" name="estimation" value="3" />
-                <li class="likertRIElement">Zgadzam się<input type="radio" name="estimation" value="4" />
-                <li class="likertRIElement">Zdecydowanie nie zgadzam się<input type="radio" name="estimation" value="5"/>
-            </ul>
-        </div>
-        <div class="RIquestionBox">
-            <h4 class="question">6. Nie lubię skupiać się na teoretycznych rozważaniach.</h4>
-            <ul class="likertRI">
-                <li class="likertRIElement">Zdecydowanie nie zgadzam się<input id="scaleStart" type="radio" name="estimation" value="1" />
-                <li class="likertRIElement">Nie zgadzam się<input type="radio" name="estimation" value="2" />
-                <li class="likertRIElement">Nie mam zdania<input type="radio" name="estimation" value="3" />
-                <li class="likertRIElement">Zgadzam się<input type="radio" name="estimation" value="4" />
-                <li class="likertRIElement">Zdecydowanie nie zgadzam się<input type="radio" name="estimation" value="5"/>
+                <li class="likertRIElement">Zgadzam się<input type="radio" name="estimation" value="2" />
+                <li class="likertRIElement">Zdecydowanie nie zgadzam się<input type="radio" name="estimation" value="1"/>
             </ul>
         </div>
         <div class="RIquestionBox">
@@ -180,11 +190,11 @@
         <div class="RIquestionBox">
             <h4 class="question">8. Nie podróżuję zbyt często.</h4>
             <ul class="likertRI">
-                <li class="likertRIElement">Zdecydowanie nie zgadzam się<input id="scaleStart" type="radio" name="estimation" value="1" />
-                <li class="likertRIElement">Nie zgadzam się<input type="radio" name="estimation" value="2" />
+                <li class="likertRIElement">Zdecydowanie nie zgadzam się<input id="scaleStart" type="radio" name="estimation" value="5" />
+                <li class="likertRIElement">Nie zgadzam się<input type="radio" name="estimation" value="4" />
                 <li class="likertRIElement">Nie mam zdania<input type="radio" name="estimation" value="3" />
-                <li class="likertRIElement">Zgadzam się<input type="radio" name="estimation" value="4" />
-                <li class="likertRIElement">Zdecydowanie nie zgadzam się<input type="radio" name="estimation" value="5"/>
+                <li class="likertRIElement">Zgadzam się<input type="radio" name="estimation" value="2" />
+                <li class="likertRIElement">Zdecydowanie nie zgadzam się<input type="radio" name="estimation" value="1"/>
             </ul>
         </div>
         <div class="RIquestionBox">
@@ -198,13 +208,13 @@
             </ul>
         </div>
         <div class="RIquestionBox">
-            <h4 class="question">10. Uważam, że dzieci nie powinny słuchać kontrowersyjnych poglądów, bo może to mieć zły wpływ na ich rozwój.</h4>
+            <h4 class="question">10. Uważam, że dzieci nie powinny słuchać kontrowersyjnych poglądów, bo może to mieć zły wpływ na ich wychowanie.</h4>
             <ul class="likertRI">
-                <li class="likertRIElement">Zdecydowanie nie zgadzam się<input id="scaleStart" type="radio" name="estimation" value="1" />
-                <li class="likertRIElement">Nie zgadzam się<input type="radio" name="estimation" value="2" />
+                <li class="likertRIElement">Zdecydowanie nie zgadzam się<input id="scaleStart" type="radio" name="estimation" value="5" />
+                <li class="likertRIElement">Nie zgadzam się<input type="radio" name="estimation" value="4" />
                 <li class="likertRIElement">Nie mam zdania<input type="radio" name="estimation" value="3" />
-                <li class="likertRIElement">Zgadzam się<input type="radio" name="estimation" value="4" />
-                <li class="likertRIElement">Zdecydowanie nie zgadzam się<input type="radio" name="estimation" value="5"/>
+                <li class="likertRIElement">Zgadzam się<input type="radio" name="estimation" value="2" />
+                <li class="likertRIElement">Zdecydowanie nie zgadzam się<input type="radio" name="estimation" value="1"/>
             </ul>
         </div>
         <div class="RIquestionBox">
@@ -217,8 +227,9 @@
                 <li class="likertRIElement">Zdecydowanie nie zgadzam się<input type="radio" name="estimation" value="5"/>
             </ul>
         </div>
+
         <div class="RIquestionBox">
-            <h4 class="question">12. Gdy uda mi się znaleźć sposób na rozwiązanie problemu, następnym razem też używam tego sposobu.</h4>
+            <h4 class="question">13. Zazwyczaj domyślam się co odczuwają ludzie w moim otoczeniu.</h4>
             <ul class="likertRI">
                 <li class="likertRIElement">Zdecydowanie nie zgadzam się<input id="scaleStart" type="radio" name="estimation" value="1" />
                 <li class="likertRIElement">Nie zgadzam się<input type="radio" name="estimation" value="2" />
@@ -228,13 +239,13 @@
             </ul>
         </div>
         <div class="RIquestionBox">
-            <h4 class="question">13. Zazwyczaj domyślam się co odczuwają ludzie w moim otoczeniu.</h4>
+            <h4 class="question">14. Uważam, że utrzymywanie tradycji jest ważne.</h4>
             <ul class="likertRI">
-                <li class="likertRIElement">Zdecydowanie nie zgadzam się<input id="scaleStart" type="radio" name="estimation" value="1" />
-                <li class="likertRIElement">Nie zgadzam się<input type="radio" name="estimation" value="2" />
+                <li class="likertRIElement">Zdecydowanie nie zgadzam się<input id="scaleStart" type="radio" name="estimation" value="5" />
+                <li class="likertRIElement">Nie zgadzam się<input type="radio" name="estimation" value="4" />
                 <li class="likertRIElement">Nie mam zdania<input type="radio" name="estimation" value="3" />
-                <li class="likertRIElement">Zgadzam się<input type="radio" name="estimation" value="4" />
-                <li class="likertRIElement">Zdecydowanie nie zgadzam się<input type="radio" name="estimation" value="5"/>
+                <li class="likertRIElement">Zgadzam się<input type="radio" name="estimation" value="2" />
+                <li class="likertRIElement">Zdecydowanie nie zgadzam się<input type="radio" name="estimation" value="1"/>
             </ul>
         </div>
         <div class="RIquestionBox">
@@ -247,19 +258,6 @@
                 <li class="likertRIElement">Zdecydowanie nie zgadzam się<input type="radio" name="estimation" value="5"/>
             </ul>
         </div>
-        <div class="RIquestionBox">
-            <h4 class="question">14. Uważam, że utrzymywanie tradycji jest ważne.</h4>
-            <ul class="likertRI">
-                <li class="likertRIElement">Zdecydowanie nie zgadzam się<input id="scaleStart" type="radio" name="estimation" value="1" />
-                <li class="likertRIElement">Nie zgadzam się<input type="radio" name="estimation" value="2" />
-                <li class="likertRIElement">Nie mam zdania<input type="radio" name="estimation" value="3" />
-                <li class="likertRIElement">Zgadzam się<input type="radio" name="estimation" value="4" />
-                <li class="likertRIElement">Zdecydowanie nie zgadzam się<input type="radio" name="estimation" value="5"/>
-            </ul>
-        </div>
-
-
-
 
 
 
